--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 # Build settings
 
-theme: hacker
+theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
